Refactor EmployeeController with DTO wrappers and standardized responses