@@ -1,102 +1,71 @@
 package com.neg.technology.human.resource.Employee.controller;
 
-import com.neg.technology.human.resource.Utility.request.DateRequest;
-import com.neg.technology.human.resource.Utility.request.IdRequest;
 import com.neg.technology.human.resource.Employee.model.request.CreateEmployeeRequest;
-import com.neg.technology.human.resource.Employee.model.response.EmployeeResponse;
 import com.neg.technology.human.resource.Employee.model.request.UpdateEmployeeRequest;
-import com.neg.technology.human.resource.Employee.model.entity.Employee;
+import com.neg.technology.human.resource.Utility.request.IdRequest;
+import com.neg.technology.human.resource.Utility.request.DateRequest;
+import com.neg.technology.human.resource.Employee.model.response.EmployeeListResponse;
+import com.neg.technology.human.resource.Employee.model.response.EmployeeResponse;
 import com.neg.technology.human.resource.Employee.model.mapper.EmployeeMapper;
 import com.neg.technology.human.resource.Employee.service.EmployeeService;
-import com.neg.technology.human.resource.Employee.validator.EmployeeValidator;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Tag(name = "Employee Controller", description = "Operations related to employee management")
 @RestController
 @RequestMapping("/api/employees")
+@RequiredArgsConstructor
 public class EmployeeController {
 
     private final EmployeeService employeeService;
-    private final EmployeeValidator employeeValidator;
-
-    public EmployeeController(EmployeeService employeeService,
-                              EmployeeValidator employeeValidator) {
-        this.employeeService = employeeService;
-        this.employeeValidator = employeeValidator;
-    }
 
     @Operation(summary = "Get all employees", description = "Retrieve a list of all employees")
-    @ApiResponse(responseCode = "200", description = "List of employees retrieved successfully")
+    @ApiResponse(responseCode = "200", description = "Employees list retrieved successfully")
     @PostMapping("/getAll")
-    public ResponseEntity<List<EmployeeResponse>> getAllEmployees() {
+    public ResponseEntity<EmployeeListResponse> getAllEmployees() {
         List<EmployeeResponse> employees = employeeService.findAll()
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
     @Operation(summary = "Get employee by ID", description = "Retrieve an employee by their unique ID")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Employee found"),
-            @ApiResponse(responseCode = "404", description = "Employee not found")
-    })
+    @ApiResponse(responseCode = "200", description = "Employee found")
     @PostMapping("/getById")
-    public ResponseEntity<EmployeeResponse> getEmployeeById(
-            @Parameter(description = "ID of the employee to retrieve", required = true)
-            @Valid @RequestBody IdRequest request) {
+    public ResponseEntity<EmployeeResponse> getEmployeeById(@Valid @RequestBody IdRequest request) {
         return employeeService.findById(request.getId())
-                .map(emp -> ResponseEntity.ok(EmployeeMapper.toDTO(emp)))
+                .map(employee -> ResponseEntity.ok(EmployeeMapper.toDTO(employee)))
                 .orElse(ResponseEntity.notFound().build());
     }
 
     @Operation(summary = "Create new employee", description = "Create a new employee record")
     @ApiResponse(responseCode = "200", description = "Employee created successfully")
     @PostMapping("/create")
-    public ResponseEntity<EmployeeResponse> createEmployee(
-            @Parameter(description = "Employee data for creation", required = true)
-            @Valid @RequestBody CreateEmployeeRequest dto) {
-        employeeValidator.validateCreateDTO(dto);
-        Employee saved = employeeService.createEmployee(dto);
-        return ResponseEntity.ok(EmployeeMapper.toDTO(saved));
+    public ResponseEntity<EmployeeResponse> createEmployee(@Valid @RequestBody CreateEmployeeRequest request) {
+        return ResponseEntity.ok(EmployeeMapper.toDTO(employeeService.createEmployee(request)));
     }
 
-    @Operation(summary = "Update existing employee", description = "Update details of an existing employee")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Employee updated successfully"),
-            @ApiResponse(responseCode = "404", description = "Employee not found")
-    })
+    @Operation(summary = "Update employee", description = "Update an existing employee record")
+    @ApiResponse(responseCode = "200", description = "Employee updated successfully")
     @PostMapping("/update")
-    public ResponseEntity<EmployeeResponse> updateEmployee(
-            @Valid @RequestBody UpdateEmployeeRequest dto) {
-        if (!employeeService.existsById(dto.getId())) {
+    public ResponseEntity<EmployeeResponse> updateEmployee(@Valid @RequestBody UpdateEmployeeRequest request) {
+        if (!employeeService.existsById(request.getId())) {
             return ResponseEntity.notFound().build();
         }
-        employeeValidator.validateUpdateDTO(dto);
-        Employee updated = employeeService.updateEmployee(dto);
-        return ResponseEntity.ok(EmployeeMapper.toDTO(updated));
+        return ResponseEntity.ok(EmployeeMapper.toDTO(employeeService.updateEmployee(request)));
     }
 
     @Operation(summary = "Delete employee", description = "Delete an employee by ID")
-    @ApiResponses({
-            @ApiResponse(responseCode = "204", description = "Employee deleted successfully"),
-            @ApiResponse(responseCode = "404", description = "Employee not found")
-    })
+    @ApiResponse(responseCode = "204", description = "Employee deleted successfully")
     @PostMapping("/delete")
-    public ResponseEntity<Void> deleteEmployee(
-            @Parameter(description = "ID of the employee to delete", required = true)
-            @Valid @RequestBody IdRequest request) {
+    public ResponseEntity<Void> deleteEmployee(@Valid @RequestBody IdRequest request) {
         if (!employeeService.existsById(request.getId())) {
             return ResponseEntity.notFound().build();
         }
@@ -104,92 +73,82 @@ public class EmployeeController {
         return ResponseEntity.noContent().build();
     }
 
-    @Operation(summary = "Get active employees", description = "Retrieve all employees that are currently active")
+    @Operation(summary = "Get active employees", description = "Retrieve all active employees")
     @ApiResponse(responseCode = "200", description = "Active employees retrieved successfully")
     @PostMapping("/getActive")
-    public ResponseEntity<List<EmployeeResponse>> getActiveEmployees() {
+    public ResponseEntity<EmployeeListResponse> getActiveEmployees() {
         List<EmployeeResponse> employees = employeeService.findByIsActiveTrue()
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
-    @Operation(summary = "Get inactive employees", description = "Retrieve all employees that are currently inactive")
+    @Operation(summary = "Get inactive employees", description = "Retrieve all inactive employees")
     @ApiResponse(responseCode = "200", description = "Inactive employees retrieved successfully")
     @PostMapping("/getInactive")
-    public ResponseEntity<List<EmployeeResponse>> getInactiveEmployees() {
+    public ResponseEntity<EmployeeListResponse> getInactiveEmployees() {
         List<EmployeeResponse> employees = employeeService.findByIsActiveFalse()
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
-    @Operation(summary = "Get employees by department ID", description = "Retrieve all employees belonging to a specific department")
+    @Operation(summary = "Get employees by department ID", description = "Retrieve all employees in a department")
     @ApiResponse(responseCode = "200", description = "Employees retrieved successfully")
     @PostMapping("/getByDepartment")
-    public ResponseEntity<List<EmployeeResponse>> getEmployeesByDepartment(
-            @Parameter(description = "Department ID", required = true)
-            @Valid @RequestBody IdRequest request) {
+    public ResponseEntity<EmployeeListResponse> getEmployeesByDepartment(@Valid @RequestBody IdRequest request) {
         List<EmployeeResponse> employees = employeeService.findByDepartmentId(request.getId())
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
-    @Operation(summary = "Get employees by position ID", description = "Retrieve all employees holding a specific position")
+    @Operation(summary = "Get employees by position ID", description = "Retrieve all employees in a position")
     @ApiResponse(responseCode = "200", description = "Employees retrieved successfully")
     @PostMapping("/getByPosition")
-    public ResponseEntity<List<EmployeeResponse>> getEmployeesByPosition(
-            @Parameter(description = "Position ID", required = true)
-            @Valid @RequestBody IdRequest request) {
+    public ResponseEntity<EmployeeListResponse> getEmployeesByPosition(@Valid @RequestBody IdRequest request) {
         List<EmployeeResponse> employees = employeeService.findByPositionId(request.getId())
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
-    @Operation(summary = "Get employees by company ID", description = "Retrieve all employees working for a specific company")
+    @Operation(summary = "Get employees by company ID", description = "Retrieve all employees in a company")
     @ApiResponse(responseCode = "200", description = "Employees retrieved successfully")
     @PostMapping("/getByCompany")
-    public ResponseEntity<List<EmployeeResponse>> getEmployeesByCompany(
-            @Parameter(description = "Company ID", required = true)
-            @Valid @RequestBody IdRequest request) {
+    public ResponseEntity<EmployeeListResponse> getEmployeesByCompany(@Valid @RequestBody IdRequest request) {
         List<EmployeeResponse> employees = employeeService.findByCompanyId(request.getId())
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
-    @Operation(summary = "Get employees hired before a specific date", description = "Retrieve all employees hired before the given date")
+    @Operation(summary = "Get employees hired before a specific date", description = "Retrieve all employees hired before given date")
     @ApiResponse(responseCode = "200", description = "Employees retrieved successfully")
     @PostMapping("/getHiredBefore")
-    public ResponseEntity<List<EmployeeResponse>> getEmployeesHiredBefore(
-            @Parameter(description = "Date in ISO format (e.g., 2024-01-01T00:00:00)", required = true)
-            @Valid @RequestBody DateRequest request) {
-        LocalDateTime dateTime = LocalDateTime.parse(request.getDate());
-        List<EmployeeResponse> employees = employeeService.findByHireDateBefore(dateTime)
+    public ResponseEntity<EmployeeListResponse> getEmployeesHiredBefore(@Valid @RequestBody DateRequest request) {
+        LocalDateTime date = LocalDateTime.parse(request.getDate());
+        List<EmployeeResponse> employees = employeeService.findByHireDateBefore(date)
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 
-    @Operation(summary = "Get employees whose employment ended before a specific date", description = "Retrieve all employees whose employment end date is before the given date")
+    @Operation(summary = "Get employees whose employment ended before a specific date", description = "Retrieve employees with employment ended before given date")
     @ApiResponse(responseCode = "200", description = "Employees retrieved successfully")
     @PostMapping("/getEmploymentEndedBefore")
-    public ResponseEntity<List<EmployeeResponse>> getEmployeesEmploymentEndedBefore(
-            @Parameter(description = "Date in ISO format (e.g., 2024-01-01T00:00:00)", required = true)
-            @Valid @RequestBody DateRequest request) {
-        LocalDateTime dateTime = LocalDateTime.parse(request.getDate());
-        List<EmployeeResponse> employees = employeeService.findByEmploymentEndDateBefore(dateTime)
+    public ResponseEntity<EmployeeListResponse> getEmployeesEmploymentEndedBefore(@Valid @RequestBody DateRequest request) {
+        LocalDateTime date = LocalDateTime.parse(request.getDate());
+        List<EmployeeResponse> employees = employeeService.findByEmploymentEndDateBefore(date)
                 .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employees);
+                .toList();
+        return ResponseEntity.ok(new EmployeeListResponse(employees));
     }
 }
